--- a/main/static/css/base.css
+++ b/main/static/css/base.css
@@ -28,8 +28,8 @@ header {
     justify-content: space-between;
 }
 
-li:nth-child(2) {
-    margin: 0 5vw;
+li {
+    margin-left: 5vw;
 }
 
 ul, li {
@@ -46,6 +46,23 @@ ul, li {
     padding-left: 2vw;
     letter-spacing: 5pt;
     font-weight: 600;
+}
+
+.btn {
+    border-radius: 20pt;
+
+    outline: none;
+    border: none;
+    cursor: pointer;
+
+    font-size: inherit;
+    color: inherit;
+    
+    padding: 0.5rem 1.25rem;
+}
+
+.login-btn {
+    background-color: #810d0d;    
 }
 
 .site-navigation {
