--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -33,6 +33,17 @@
                 <li>
                     <a href ="">Contact Us</a>
                 </li>
+                <li>
+                    {% if user.is_authenticated %}
+                    <a href = "{% url 'logout' %}">
+                        <button class = 'btn login-btn'>{{ user.first_name }}</button>
+                    </a>
+                    {% else %}
+                    <a href = "{% url 'login' %}">
+                        <button class = 'btn login-btn'>Login/Signup</button>
+                    </a>
+                    {% endif %}
+                </li>
             </ul>
         </div>
     </header>
