Created New HTML page and modified existing one

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -25,7 +25,7 @@
         <div class = 'site-navigation'>
             <ul>
                 <li>
-                    <a href = "">Dashboard</a>
+                    <a href = "/dashboard">Dashboard</a>
                 </li>
                 <li>
                     <a href = "">About Us</a>
