modified index page HTML and CSS

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -10,5 +10,25 @@
 {% endblock head %}
 
 {% block body %}
-    
+    <div class = 'main-container'>
+        <div class = 'left-container'>
+            <div class = 'content-title'>
+                Lorem ipsum dolor sit amet.
+            </div>
+            <div class = 'content-subheading'>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore explicabo sit fuga, harum aspernatur iure autem veniam exercitationem similique facere.
+            </div>
+        </div>
+        <div class = 'right-container'>
+            <img src = "{% static 'images/main.png' %}">
+        </div>
+    </div>
+    <div class = 'sub-container'>
+        <div class = 'content-title center'>
+            Lorem ipsum dolor sit.
+        </div>
+        <div class = 'content-subheading'>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi molestias officia quis a corporis hic provident maiores accusamus ex optio asperiores cum saepe nostrum animi, repellendus voluptatem et! Labore deserunt nisi officiis rem neque perferendis corrupti ipsa veritatis nesciunt suscipit! Numquam voluptatem nemo corrupti quo dolore quam, asperiores quae molestiae facilis illum labore odit delectus deleniti quas consectetur, temporibus iste eius perferendis aliquam quos, tempore totam! Autem, consequatur ipsa. In tenetur dolore sit a, deleniti ratione culpa officiis repudiandae beatae nisi pariatur dignissimos aspernatur? Praesentium beatae magni illum illo itaque nihil! Nihil eveniet praesentium harum laboriosam architecto delectus asperiores! Reiciendis.
+        </div>
+    </div>
 {% endblock body %}
