--- a/main/static/css/base.css
+++ b/main/static/css/base.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
 
 * {
     margin: 0;
@@ -21,11 +22,15 @@ body {
 header {
     font-family: 'Open Sans', serif;
     font-size: 3.6vmin;
-
+    background: linear-gradient(90deg, #000000, #ff3b3b);
+    background-repeat: no-repeat;
     display: flex;
     gap: 5vw;
     align-items: center;
     justify-content: space-between;
+    position: sticky;
+    top: 0;
+    z-index: 1;
 }
 
 li {
@@ -62,6 +67,7 @@ ul, li {
 }
 
 .login-btn {
+    width: 13rem;
     background-color: #810d0d;    
 }
 
