--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -13,10 +13,20 @@
     <div class = 'main-container'>
         <div class = 'left-container'>
             <div class = 'content-title'>
-                Lorem ipsum dolor sit amet.
+                Test Yourself,
+                <br>
+                Best Yourself.
+                <br>
+                <br>
             </div>
             <div class = 'content-subheading'>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore explicabo sit fuga, harum aspernatur iure autem veniam exercitationem similique facere.
+                <strong><i>Are you at a risk of heart disease?</i></strong>
+                <br>
+                Take care of your heart health with our advanced risk prediction tool and personalised advice.
+                <br>
+                We aim to analyse all the objective symptoms that may lead to increase in heart ailments in future.
+                <br>
+                With our system you can get aware of your  vulnerability to any heart related complication in near future.
             </div>
         </div>
         <div class = 'right-container'>
@@ -25,10 +35,38 @@
     </div>
     <div class = 'sub-container'>
         <div class = 'content-title center'>
-            Lorem ipsum dolor sit.
+            <u>Our Mission</u>
         </div>
         <div class = 'content-subheading'>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi molestias officia quis a corporis hic provident maiores accusamus ex optio asperiores cum saepe nostrum animi, repellendus voluptatem et! Labore deserunt nisi officiis rem neque perferendis corrupti ipsa veritatis nesciunt suscipit! Numquam voluptatem nemo corrupti quo dolore quam, asperiores quae molestiae facilis illum labore odit delectus deleniti quas consectetur, temporibus iste eius perferendis aliquam quos, tempore totam! Autem, consequatur ipsa. In tenetur dolore sit a, deleniti ratione culpa officiis repudiandae beatae nisi pariatur dignissimos aspernatur? Praesentium beatae magni illum illo itaque nihil! Nihil eveniet praesentium harum laboriosam architecto delectus asperiores! Reiciendis.
+            <strong>AT H.A.R.T</strong>,
+            <br>
+             We empower individuals with the requisite knowledge and tools ;to take control of their heart health.
+             <br>
+             We understand the importance of  <em>early detection and prevention</em> in reducing the risk of heart disease,hence we developed a <strong>comprehensive and easy-to-use platform</strong> accurately predicting your risk of developing heart disease and provides personalized advice to help lower that risk.
+             <br>
+        </div>
+    </div>
+    <div class = 'sub-container'>
+        <div class = 'content-title center'>
+            <u>Our Commitment</u>
+        </div>
+        <div class = 'content-subheading'>
+            <strong>We</strong>,
+            <br>
+             Are commited to provide <strong>accurate,personalised and up-to-date information</strong> and strive to educate and engage our users on the importance of heart health and disease prevention
+             <br>
+             Our platform is regularly updated with the latest research and advancements in the field, ensuring that you recieve the most accurate and relevant advice.
+             <br>
+             <br>
+        </div>
+        <div class="highlight">
+            <em>Don't wait until it's too late,
+            <br>
+            Start your journey to a Healthier Heart today.</em>
+            <br>
+        </div>
+        <div class="highlight desc">
+            Join us on our mission to improve heart health and reduce the risk of heart disease. Start your assessment today and take control of your heart health.
         </div>
     </div>
 {% endblock body %}
