--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -28,10 +28,10 @@
                     <a href = "/dashboard">Dashboard</a>
                 </li>
                 <li>
-                    <a href = "">About Us</a>
+                    <a href = "/about">About Us</a>
                 </li>
                 <li>
-                    <a href ="">Contact Us</a>
+                    <a href ="/contact">Contact Us</a>
                 </li>
                 <li>
                     {% if user.is_authenticated %}
