about us content modify

--- a/main/templates/about.html
+++ b/main/templates/about.html
@@ -11,9 +11,19 @@
 
 {% block body %}
     <main class="main-container">
-        <div class="page-title">Who are WE ?</div>
+        
+    <div class="page-title">
+        Who are WE ?
+    </div>
         <article class="hero-content">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit ratione velit aliquid vero asperiores incidunt optio corrupti eius dicta quos?
+           
+           
+           The incidence of heart-related diseases has been increasing at an alarming rate in recent years ,especially aggravated with the onset of COVID-19 .According to WHO, cardiovascular diseases are the leading cause of death globally.
+           <br>
+           This can be attributed to a variety of factors, including the ongoing pandemic and its related side effects , unhealthy diets etc.The increasing trend of heart-related diseases requires a multi-faceted approach, including the promotion of healthy lifestyles, early detection with management of risk factors, and access to effective treatments.
+           <br>
+           In conclusion, the rising trend of heart-related illnesses is a call for action to prevent and control these diseases. By taking a proactive approach to heart health, we can help to reduce the impact of heart disease and improve the health and well-being of individuals and communities around the world. 
+
         </article>
         <div class="image-container">
             <img src="{% static 'images/about_bg.png' %}">
